# bizos

./: .gitignore  CLAUDE.md  README.md  agents.py  app.js  app.py  buyer_finder.py  buyers.csv  debug.py  gmail_sender.py  index.html  main.py  pyproject.toml  requirements.txt  styles.css  test.py
